--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <br>
     <br>
 
-    <p>Codigo robado nada maltratado</p>
+    <p>Quien necesita un buen CSS cuando el programa funciona?</p>
 
 </body>
 
